Bug 1407505 - Relax assertion in ExecutableAllocator destructor if the embedding leaked r=jandem